--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,15 @@
     "owner": "htynkn",
     "overview": "Get metadata from tmdb.",
     "imageURL": "https://raw.githubusercontent.com/JavScraper/Emby.Plugins.JavScraper/master/Emby.Plugins.JavScraper/thumb.png",
-    "versions": []
+    "versions": [
+      {
+        "checksum": "b72470c9e83d4cf2ca3717b0dfbb74e1",
+        "changelog": "init",
+        "targetAbi": "10.*-*.0",
+        "sourceUrl": "https://github.com/htynkn/HappyMovie/releases/download/1.0.0.0/happymovie_1.0.0.0.zip",
+        "timestamp": "2021-07-22T16:33:29Z",
+        "version": "1.0.0.0"
+      }
+    ]
   }
 ]
