--- a/Jellyfin.Plugin.HappyMovie/Jellyfin.Plugin.HappyMovie.csproj
+++ b/Jellyfin.Plugin.HappyMovie/Jellyfin.Plugin.HappyMovie.csproj
@@ -9,8 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Jellyfin.Controller" Version="10.*-*" />
-        <PackageReference Include="Jellyfin.Model" Version="10.*-*" />
+        <PackageReference Include="Jellyfin.Controller" Version="10.7.0" />
+        <PackageReference Include="Jellyfin.Model" Version="10.7.0" />
         <PackageReference Include="TMDbLib" Version="1.8.1" />
         <PackageReference Include="Yove.Proxy" Version="1.1.1" />
     </ItemGroup>
