--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,16 @@
     "description": "Get metadata from tmdb.",
     "owner": "htynkn",
     "overview": "Get metadata from tmdb.",
-    "imageURL": "https://raw.githubusercontent.com/JavScraper/Emby.Plugins.JavScraper/master/Emby.Plugins.JavScraper/thumb.png",
-    "versions": []
+    "imageURL": "https://raw.githubusercontent.com/htynkn/HappyMovie/master/Jellyfin.Plugin.HappyMovie/thumb.png",
+    "versions": [
+      {
+        "checksum": "bf17c3f19d3915d1214ce816f184647d",
+        "changelog": "init",
+        "targetAbi": "10.7.0.0",
+        "sourceUrl": "https://github.com/htynkn/HappyMovie/releases/download/1.0.0.0/happymovie_1.0.0.0.zip",
+        "timestamp": "2021-07-22T16:47:35Z",
+        "version": "1.0.0.0"
+      }
+    ]
   }
 ]
