--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
         "imageURL": "https://raw.githubusercontent.com/htynkn/HappyMovie/master/Jellyfin.Plugin.HappyMovie/thumb.png",
         "versions": [
             {
+                "checksum": "614735e736bb71594f48ae8120e4e520",
+                "changelog": "",
+                "targetAbi": "10.8.0.0",
+                "sourceUrl": "https://github.com/htynkn/HappyMovie/releases/download/1.0.1.3/happymovie_1.0.1.3.zip",
+                "timestamp": "2022-10-26T04:30:08Z",
+                "version": "1.0.1.3"
+            },
+            {
                 "checksum": "b9160dda623b50757092aa8b1a2c2aba",
                 "changelog": "add adult content checkbox",
                 "targetAbi": "10.7.0.0",
