--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
-version: "3"
+version: "2"
 
 services:
   jellyfin:
-    image: jellyfin/jellyfin:10.8.5
+    image: jellyfin/jellyfin:10.8.4
     volumes:
-      - config:/config:z
       - ./videos:/media/videos
-      - ./Jellyfin.Plugin.HappyMovie/bin/Debug/net6.0/Jellyfin.Plugin.HappyMovie.dll:/config/plugins/HappyMovie/Jellyfin.Plugin.HappyMovie.dll
-      - ~/.nuget/packages/yove.proxy/1.1.1/lib/netstandard2.0/Yove.Proxy.dll:/config/plugins/HappyMovie/Yove.Proxy.dll
+      - ./output/:/config/plugins/HappyMovie/
     ports:
       - 127.0.0.1:8896:8096
-
-volumes:
-  config:
