--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,11 @@
         "imageURL": "https://raw.githubusercontent.com/htynkn/HappyMovie/master/Jellyfin.Plugin.HappyMovie/thumb.png",
         "versions": [
             {
-                "checksum": "614735e736bb71594f48ae8120e4e520",
-                "changelog": "",
+                "checksum": "155f13c27878f92b8f148176531122e8",
+                "changelog": "support 10.8",
                 "targetAbi": "10.8.0.0",
                 "sourceUrl": "https://github.com/htynkn/HappyMovie/releases/download/1.0.1.3/happymovie_1.0.1.3.zip",
-                "timestamp": "2022-10-26T04:30:08Z",
+                "timestamp": "2022-11-03T09:36:32Z",
                 "version": "1.0.1.3"
             },
             {
