--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: Release ${{ github.ref_name }}
           draft: true
           prerelease: false
 
@@ -43,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/happymovie_${{ github.ref }}.zip
-          asset_name: happymovie_${{ github.ref }}.zip
+          asset_path: ./release/happymovie_${{ github.ref_name }}.zip
+          asset_name: happymovie_${{ github.ref_name }}.zip
           asset_content_type: application/zip
