--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
         "imageURL": "https://raw.githubusercontent.com/htynkn/HappyMovie/master/Jellyfin.Plugin.HappyMovie/thumb.png",
         "versions": [
             {
+                "checksum": "a929a896bb85abd9ec028180220d8940",
+                "changelog": "support 10.9",
+                "targetAbi": "10.9.0.0",
+                "sourceUrl": "https://github.com/htynkn/HappyMovie/releases/download/1.0.1.4/happymovie_1.0.1.4.zip",
+                "timestamp": "2024-10-11T08:36:01Z",
+                "version": "1.0.1.4"
+            },
+            {
                 "checksum": "155f13c27878f92b8f148176531122e8",
                 "changelog": "support 10.8",
                 "targetAbi": "10.8.0.0",
